# echo-link

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main
.cache/clangd/index/: Application.hpp.C68FF2545C5DC8AC.idx  AudioCodec.hpp.4A5B710031F93825.idx  FakeAudioSource.hpp.8D79D1EB5F8E976A.idx  IAudioPlayback.hpp.452B3C571AF480B9.idx  IAudioSource.hpp.9AB7ABB1E02DB3DB.idx  NetworkManager.hpp.8D8AA187FB8307A1.idx  PortAudioPlayback.hpp.CE6F9DC35DAEC17B.idx  ThreadSafeQueue.hpp.265A88F95E718B2E.idx  __sigval_t.h.65F5B8CAD49693C0.idx  address.hpp.0303DDBFC1355940.idx  address.hpp.B1CDBFA122627310.idx  address.ipp.5BE71D1266AFDDD3.idx  address_v4.hpp.B978E4656922454A.idx  address_v4.hpp.C0EC4E9AE6061D7B.idx  address_v4.ipp.B9EE825DD5ACB261.idx  address_v4_iterator.hpp.9232EF3064835BD0.idx  address_v4_range.hpp.8F81FAE811B8A98B.idx  address_v6.hpp.4AF67EA2CC43ACF1.idx  address_v6.hpp.8F371BD607885315.idx  address_v6.ipp.4A238C26D965237F.idx  address_v6_iterator.hpp.B7F480EDFD2B717E.idx  address_v6_range.hpp.BCDCBAEAAF7B307D.idx  algorithm.BB1DD98A0283BBD2.idx  align.h.F538AF5501CF5C99.idx  aligned_buffer.h.EF40936234B53958.idx  alloc_traits.h.3F20844836B92A92.idx  alloc_traits.h.AA4FE26E446B6537.idx  allocated_ptr.h.3AE783F1E0C3EEEE.idx  allocator.h.78872CA87148A759.idx  allocator.hpp.BC06496E2BB4893C.idx  any.5A6BDFBD0D78DECD.idx  any_completion_executor.hpp.93768E8C5F92C06E.idx  any_completion_executor.ipp.F985E1834DF85581.idx  any_completion_handler.hpp.C669A30A00D9145B.idx  any_executor.hpp.6D27F544A758DEE1.idx  any_io_executor.hpp.E301B5CDF4C649F9.idx  any_io_executor.ipp.4057E16294B403B7.idx  append.hpp.24D88237E8F044A4.idx  append.hpp.C642862917D28209.idx  array.75025A6CC92D7005.idx  (+617 more)
data/: audio.raw
include/: Application.hpp  AudioCodec.hpp  FakeAudioSource.hpp  NetworkManager.hpp  PortAudioCapture.hpp  PortAudioPlayback.hpp  ThreadSafeQueue.hpp  i_audio_source.hpp  network_manager.hpp
include/interfaces/: IAudioPlayback.hpp  IAudioSource.hpp
src/: Application.cc  AudioCodec.cc  FakeAudioSource.cc  NetworkManager.cc  PortAudioCapture.cc  PortAudioPlayback.cc  chat_app.cc  main.cc  network_manager.cc
